tweak to API
